# zmk-paging

./: build.yaml
.github/workflows/: keymap_drawer.yml
boards/shields/: CMakeLists.txt
boards/shields/paging/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  paging-layouts.dtsi  paging.dtsi  paging.overlay  paging.zmk.yml
boards/shields/paging/drivers/ble_check/: ble_check.c  ble_check.h
boards/shields/paging/drivers/bluetooth_led/: CMakeLists.txt  bluetooth_led.c  bluetooth_led.h
boards/shields/paging/drivers/bluetooth_status/: bluetooth_status.c  bluetooth_status.h
boards/shields/paging/drivers/charging_status/: Kconfig  charging_status.c  charging_status.h
boards/shields/paging/drivers/layer_indicator/: layer_change.c  layer_change.h  layer_indicator.c  layer_indicator.h
boards/shields/paging/drivers/layer_status/: layer_status.c
boards/shields/paging/dts/bindings/: bluetooth-status.yaml  charging-status.yaml  charging_status.yaml  zmk,charging-status.yaml
boards/shields/paging/src/: bluetooth_monitor.c  bluetooth_monitor.h  charging_backlight_controller.c  charging_monitor.c  charging_monitor.h  charging_rgb_controller.c  config.h  led_controller.c  led_controller.h  state_coordinator.c  state_coordinator.h
config/: paging.conf  paging.keymap
keymap-drawer/: paging.yaml
